package com.example.smtpautosendmessage;

public class SMTPApplicationLauncher {
    public static void main(String[] args) {
        SMTPApplication.main(args);
    }
}
